Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,11 +1,11 @@
 [package]
-name = systemd
-url = file:///aot/build/clearlinux/packages/systemd/systemd-v251.0.tar.gz
+name = uksmd
+url = file:///aot/build/clearlinux/packages/uksmd/uksmd-v31.7.2022.tar.gz
 archives = 
-giturl = https://github.com/systemd/systemd.git
+giturl = https://codeberg.org/pf-kernel/uksmd.git
 domain = 
 download_from_git = True
-branch = main
+branch = master
 force_module = 
 force_fullclone = 
 archives_from_git = 
@@ -13,7 +13,7 @@ alias =
 
 [autospec]
 # build 32 bit libraries
-32bit = true
+32bit = false
 # build 32 bit libraries only
 32bit_only = false
 # allow package to build with test failures
